# IDE_Scanner

./: .gitignore  Dockerfile  PYPI_README.md  README.md  action.yml  pyproject.toml
.github/workflows/: deep-scan.yml
benchmarks/: ground-truth.json  threat-feed.json
benchmarks/datasets/vscode-credential-exposure/: README.md
benchmarks/website-corpus/v1/: frozen-input.json  label-corrections.json  manifest.json  results.json
docs/: classification-policy-v3.md  github-policy-gate.md  implementation-summary.md  metrics-design.md  metrics-reference.md
fixtures/agent-tool/: extension.js  package.json
fixtures/benign-formatter/: extension.js  package.json
fixtures/credential-exfil/: extension.js  install.js  package.json
fixtures/lifecycle-dropper/: package.json
fixtures/mutable-dependency/: package.json
fixtures/native-artifact/: package.json  server.node
fixtures/startup-theme/: package.json
fixtures/threat-feed-malware/: extension.js  package.json
reports/: classification-calibration-30.md  scanner-precision-audit-2026-07-16.md  solidity-metrics-installed-report.json  solidity-metrics-installed-report.md  website-benchmark-2026-07-16.md
rules/semgrep/: vscode-security.yml
rules/yara/: ide-scanner.yar
scripts/: acquire_benchmark_corpus.py  callback_scan.py  claim_scan.py  enqueue_scan.py  policy_gate.py  publish_website_corpus.py  release_monitor.py  run-static-benchmark-sandbox.sh  summarize_website_benchmark.py  validate_website_publication.py
src/extension_scanner_cli/: __init__.py  main.py  report_reader.py  scanner_adapter.py
src/extension_scanner_cli/exporters/: __init__.py  html.py  markdown.py
src/extension_scanner_cli/ui/: panels.py  prompts.py  renderers.py  tables.py  theme.py
src/ide_scanner/: agent.py  ast_analyzer.py  classification_policy.py  cli.py  core.py  models.py  public_outcomes.py  registry.py  report_bundle.py  rule_registry.py  rules.py  sandbox_runner.py  scanner.py  service.py  web_bridge.py
src/ide_scanner/intelligence/: extension-advisories.json
src/ide_scanner/js_ast/: walker.js
src/ide_scanner/providers/: static_analysis.py
templates/: ide-scanner-release-monitor.yml
tests/: test_agent_privacy.py  test_claim_scan.py  test_classification_policy_v3.py  test_cli_honesty.py  test_cli_ui.py  test_contextual_scoring.py  test_deep_scan_workflow.py  test_enqueue_scan.py  test_policy_gate.py  test_public_outcomes.py  test_registry.py  test_report_build_identity.py  test_rule_registry.py  test_scanner.py  test_service.py  test_trust_invariants.py  test_walker_large_output.py  test_website_publication.py  test_yara_precision.py
tests/provider_samples/: credential_to_network.js  encoded_dynamic.js
