[project]
name = "ide-scanner"
version = "0.1.0"
description = "Evidence-first VS Code extension security scanner."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
semgrep = ["semgrep>=1.100,<2"]
yara = ["yara-python>=4.5,<5"]
analysis = ["semgrep>=1.100,<2", "yara-python>=4.5,<5"]

[project.scripts]
ide-scanner = "ide_scanner.cli:main"
ide-scanner-service = "ide_scanner.service:main"
scan = "extension_scanner_cli.main:main"

[tool.setuptools.package-data]
ide_scanner = ["js_ast/*.js", "js_ast/*LICENSE*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
