[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardlens-core"
version = "0.1.1"
description = "Proprietary scanner runtime for Guardrails CLI."
requires-python = ">=3.11"
readme = "PYPI_README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [{ name = "Preetham AK" }]
maintainers = [{ name = "Preetham AK" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

[project.optional-dependencies]
semgrep = ["semgrep>=1.100,<2"]
yara = ["yara-python>=4.5,<5"]
analysis = ["semgrep>=1.100,<2", "yara-python>=4.5,<5"]

[project.urls]
Website = "https://ide-scanner.vercel.app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ide_scanner*"]

[tool.setuptools.package-data]
ide_scanner = ["js_ast/*.js", "js_ast/*LICENSE*", "intelligence/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
